[gd_scene load_steps=10 format=2]

[ext_resource path="res://Objects/Wizards/Zak/ZakSkin.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Wizards/Wizard.gd" type="Script" id=2]
[ext_resource path="res://Objects/Test/Misc/PlayerUIDebug.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Wizards/Utility/SpellCast.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Wizards/Utility/WizardParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Wizards/Utility/WizardTimers.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Wizards/Utility/EffectsController.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/Test/Dummy/Banana_Suit.png" type="Texture" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.378
height = 60.7831

[node name="DummyWizard" type="KinematicBody2D"]
collision_mask = 7
script = ExtResource( 2 )
jump_strength = 800.0

[node name="WizardTimers" parent="." instance=ExtResource( 6 )]

[node name="Visual" type="Node2D" parent="."]

[node name="WizardSkin" parent="Visual" instance=ExtResource( 1 )]
visible = false
position = Vector2( 4, 0 )

[node name="Sprite" type="Sprite" parent="Visual"]
position = Vector2( 1, -30 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 9 )
flip_h = true

[node name="WizardParticles" parent="Visual" instance=ExtResource( 5 )]

[node name="CastPosition" type="Position2D" parent="Visual"]
position = Vector2( 56, 0 )

[node name="SpellCast" parent="." instance=ExtResource( 4 )]
cast_position_path = NodePath("../Visual/CastPosition")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -17 )
shape = SubResource( 1 )

[node name="PlayerUIDebug" parent="." instance=ExtResource( 3 )]
position = Vector2( 40, -152 )

[node name="EffectsController" parent="." instance=ExtResource( 7 )]
position = Vector2( 4, -17 )

[connection signal="on_casting_spell" from="SpellCast" to="." method="_on_SpellCast_on_casting_spell"]
[connection signal="on_invoke_spell" from="SpellCast" to="." method="_on_SpellCast_on_invoke_spell"]
